--- a/site/03-configuration/index.html
+++ b/site/03-configuration/index.html
@@ -158,7 +158,7 @@
 请求类型: POST
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
-<p>其它模式时：</p>
+<p>终端模式时：</p>
 <blockquote>
 <p>请求类型: POST
 object = "config"
