--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -167,7 +167,7 @@ HTTP头：token = , 使用登陆时返回的token
 <p>请求URL: http://dev-ip-addr:port:/api/user
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
-<p>其它模式时：</p>
+<p>终端模式时：</p>
 <blockquote>
 <p>请求类型: POST
 object = "user"
