--- a/site/00-version/index.html
+++ b/site/00-version/index.html
@@ -137,7 +137,15 @@
 <hr />
 <p>修改记录:</p>
 <ol>
-<li>2020-11-22</li>
+<li>
+<p>2020-12-02</p>
+<blockquote>
+<p>删除http client的支持</p>
+</blockquote>
+</li>
+<li>
+<p>2020-11-22</p>
+</li>
 </ol>
 <blockquote>
 <p>迁移到readthedocs</p>
