--- a/site/07-rule/index.html
+++ b/site/07-rule/index.html
@@ -190,8 +190,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;rule&quot;,
-    &quot;action&quot;:&quot;add&quot;,
+    &quot;action&quot;:&quot;rule-add&quot;,
     &quot;reqid&quot;:298299,
     &quot;id&quot;:&quot;EeqZmH943F8&quot;,
     &quot;rules&quot; : [
@@ -222,8 +221,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;rule&quot;,
-    &quot;action&quot;:&quot;del&quot;,
+    &quot;action&quot;:&quot;rule-del&quot;,
     &quot;reqid&quot;:298299,
     &quot;id&quot;:&quot;EeqZmH943F8&quot;,
 }
@@ -240,8 +238,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;rule&quot;,
-    &quot;action&quot;:&quot;update&quot;,
+    &quot;action&quot;:&quot;rule-update&quot;,
     &quot;reqid&quot;:298299,
 
     &quot;id&quot;:&quot;EeqZmH943F8&quot;,
@@ -274,8 +271,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;rule&quot;,
-    &quot;action&quot;:&quot;list&quot;,
+    &quot;action&quot;:&quot;rule-list&quot;,
     &quot;reqid&quot;:298299,
     &quot;offset&quot;: 0,
     &quot;limit&quot;:10
