--- a/site/09-advt/index.html
+++ b/site/09-advt/index.html
@@ -169,9 +169,8 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;advt&quot;,
     &quot;reqid&quot;:19292,
-    &quot;action&quot;:&quot;add&quot;,
+    &quot;action&quot;:&quot;advt-add&quot;,
 
     &quot;id&quot;:&quot;9ssosxlsiw&quot;,
     &quot;effect&quot;:1929292,
@@ -200,9 +199,8 @@ duration : 此广告播放时间时延，默认设备配置页中的广告时延
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;advt&quot;,
     &quot;reqid&quot;:19292,
-    &quot;action&quot;:&quot;del&quot;,
+    &quot;action&quot;:&quot;advt-del&quot;,
     &quot;id&quot;:&quot;9ssosxlsiw&quot;
 }
 </code></pre>
@@ -219,9 +217,8 @@ duration : 此广告播放时间时延，默认设备配置页中的广告时延
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;advt&quot;,
     &quot;reqid&quot;:19292,
-    &quot;action&quot;:&quot;list&quot;,
+    &quot;action&quot;:&quot;advt-list&quot;,
 }
 </code></pre>
 <ul>
