--- a/site/10-card/index.html
+++ b/site/10-card/index.html
@@ -168,9 +168,8 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;card&quot;,
     &quot;reqid&quot;:92929,
-    &quot;action&quot;:&quot;add&quot;,
+    &quot;action&quot;:&quot;card-add&quot;,
     &quot;id&quot;:&quot;EeqZmH943F8&quot;,
     &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
     &quot;rule&quot;: &quot;Iksiwim&quot;,
@@ -200,9 +199,8 @@ data : IC卡匹配数据，必填</p>
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;card&quot;,
     &quot;reqid&quot;:92929,
-    &quot;action&quot;:&quot;del&quot;,
+    &quot;action&quot;:&quot;card-del&quot;,
     &quot;id&quot;:&quot;EeqZmH943F8&quot;
 }
 </code></pre>
@@ -219,9 +217,8 @@ data : IC卡匹配数据，必填</p>
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;card&quot;,
     &quot;reqid&quot;:92929,
-    &quot;action&quot;:&quot;list&quot;,
+    &quot;action&quot;:&quot;card-list&quot;,
     &quot;offset&quot;: 18,
     &quot;limit&quot;:2
 }
