--- a/site/05-visitor/index.html
+++ b/site/05-visitor/index.html
@@ -176,8 +176,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;visitor&quot;,
-    &quot;action&quot;: &quot;add&quot;,
+    &quot;action&quot;: &quot;visitor-add&quot;,
     &quot;reqid&quot;:129393,
     &quot;params&quot;: [
         {
@@ -212,8 +211,7 @@ HTTP头：token = , 使用登陆时返回的token
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;object&quot;:&quot;visitor&quot;,
-    &quot;action&quot;: &quot;del&quot;,
+    &quot;action&quot;: &quot;visitor-del&quot;,
     &quot;reqid&quot;:129393,
     &quot;params&quot;: [
         {
