--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -252,7 +252,7 @@
 
     &quot;device-id&quot;:&quot;device-id&quot;,    // 设备ID
     &quot;timestamp&quot;:1560392020,     // 当时时间戳
-    &quot;once&quot; : 19283892,          // 随机数
+    &quot;nonce&quot; : 19283892,          // 随机数
     &quot;signature&quot;:&quot;xxxxx&quot;         // 设备签名
 }
 </code></pre>
@@ -280,7 +280,7 @@ public-key 采用base64编码后的串</p>
 
     &quot;device-id&quot;:&quot;device-id&quot;,    // 设备ID
     &quot;timestamp&quot;:1560392020,     // 当时时间戳
-    &quot;once&quot; : 19283892,          // 随机数
+    &quot;nonce&quot; : 19283892,          // 随机数
     &quot;signature&quot;:&quot;xxxxx&quot;         // 设备签名
 }
 </code></pre>
@@ -329,7 +329,7 @@ public-key 采用base64编码后的串</p>
 
     &quot;device-id&quot;:&quot;device-id&quot;,    // 设备ID
     &quot;timestamp&quot;:1560392020,     // 当时时间戳
-    &quot;once&quot; : 19283892,          // 随机数
+    &quot;nonce&quot; : 19283892,          // 随机数
     &quot;signature&quot;:&quot;xxxxx&quot;         // 设备签名
 }
 </code></pre>
