--- a/site/03-configuration/index.html
+++ b/site/03-configuration/index.html
@@ -305,7 +305,7 @@ HTTP头：token = , 使用登陆时返回的token
         &quot;key&quot;:&quot;show-mode&quot;,
         &quot;value&quot;:&quot;desc&quot;,
         &quot;class&quot;:&quot;interactive&quot;,
-        &quot;desc&quot; : &quot;显示模式，name - 仅姓名, desc - 姓名+部门, none - 不显示文字&quot;,
+        &quot;desc&quot; : &quot;显示模式，user - 姓名/部门/图片, none - 不显示隐私信息&quot;,
         &quot;options&quot; : &quot;cp&quot;
     },
 
@@ -313,7 +313,7 @@ HTTP头：token = , 使用登陆时返回的token
         &quot;key&quot;:&quot;device-mode&quot;,
         &quot;value&quot;:&quot;advt&quot;,
         &quot;class&quot;:&quot;interactive&quot;,
-        &quot;desc&quot; : &quot;设备模式，acs - 门禁模式，lock - 门锁模式，advt - 广告模式，therm - 测温模式&quot;,
+        &quot;desc&quot; : &quot;设备模式，acs - 门禁模式，advt - 广告模式&quot;,
         &quot;options&quot; : &quot;cp&quot;
     },
 
@@ -401,13 +401,13 @@ HTTP头：token = , 使用登陆时返回的token
         &quot;key&quot;:&quot;wifi-mode&quot;,
         &quot;value&quot;:&quot;ap&quot;,
         &quot;class&quot;:&quot;network&quot;,
-        &quot;desc&quot; : &quot;WIFI模式，none 不使能wifi, ap - 热点模式，sta - 站点模式，mixed - 混合模式&quot;,
+        &quot;desc&quot; : &quot;WIFI模式，none 不使能wifi, ap - 热点模式，sta - 站点模式&quot;,
         &quot;options&quot; : &quot;wr&quot;
     },
 
     {
         &quot;key&quot;:&quot;wifiap-ssid&quot;,
-        &quot;value&quot;:&quot;walos-wifi-abc&quot;,
+        &quot;value&quot;:&quot;wos-devid&quot;,
         &quot;class&quot;:&quot;network&quot;,
         &quot;desc&quot; : &quot;WIFI热点模式SSID，热点模式时配置&quot;,
         &quot;options&quot; : &quot;wr&quot;
@@ -423,7 +423,7 @@ HTTP头：token = , 使用登陆时返回的token
 
     {
         &quot;key&quot;:&quot;wifista-ssid&quot;,
-        &quot;value&quot;:&quot;walos-wifi-abc&quot;,
+        &quot;value&quot;:&quot;wifi-ap-ssid&quot;,
         &quot;class&quot;:&quot;network&quot;,
         &quot;desc&quot; : &quot;WIFI站点模式时连接的热点SSID&quot;,
         &quot;options&quot; : &quot;wr&quot;
@@ -441,7 +441,7 @@ HTTP头：token = , 使用登陆时返回的token
         &quot;key&quot;:&quot;manager-mode&quot;,
         &quot;value&quot;:&quot;cloud&quot;,
         &quot;class&quot;:&quot;manager&quot;,
-        &quot;desc&quot; : &quot;管理模式，cloud - 接入八识云，local - 接入门禁控制器， none - 仅提供web服务，wechat - 接入企业微信， client - HTTP客户端&quot;,
+        &quot;desc&quot; : &quot;管理模式，cloud - 接入云平台，local - 接入门禁控制器， none - 仅提供本地web api，wechat - 接入企业微信, websock - 接入websock服务&quot;,
         &quot;options&quot; : &quot;wr&quot;
     },
 
@@ -729,47 +729,22 @@ HTTP头：token = , 使用登陆时返回的token
 }
 
 </code></pre>
-<pre><code class="language-json">{
-    &quot;p&quot;:&quot;@Admin2020&quot;,   // 默认帐号的密码
-
-    &quot;ap&quot;:{              // 配置WIFI热点
-        &quot;s&quot;:&quot;walos-xxx&quot;,    // SSID号
-        &quot;p&quot;:&quot;passwd2020&quot;    // 密码
-    },
-
-    &quot;sta&quot;:{             // 配置WIFI客户端
-        &quot;s&quot;:&quot;chinaneet-xxx&quot;,    // SSID号
-        &quot;p&quot;:&quot;passwd2020&quot;        // 密码
-    },
-
-    &quot;eth&quot;:{             // 配置以太网
-        &quot;m&quot;:&quot;dynamic&quot;   // 配置为动态IP模式
-    },
-
-    &quot;eth&quot;:{             // 配置以太网
-        &quot;m&quot;:&quot;static&quot;,   // 配置静态模式
-        &quot;ip&quot;:&quot;192.168.20.10&quot;,   // 静态IP
-        &quot;mk&quot;:&quot;255.255.255.0&quot;,   // 掩码
-        &quot;gw&quot;:&quot;102.168.20.1&quot;     // 网关
-    }
-}
-
-</code></pre>
 <h3 id="_7">二维码扫码配置项</h3>
+<p>用成的规则如下</p>
 <ol>
-<li>配置WIFI网络</li>
+<li>配置连接到WIFI网络</li>
 </ol>
 <p>WIFI:T:WPA;S:mynetwork;P:mypass;;</p>
 <ol>
-<li>配置WIFI热点</li>
+<li>配置本机为WIFI热点</li>
 </ol>
 <p>WIAP:T:WPA;S:mynetwork;P:mypass;;</p>
 <ol>
 <li>配置以太网</li>
 </ol>
-<p>ETH:M:D;</p>
-<p>ETH:M:S;I:192.168.10.10;K:255.255.255.0;G:192.168.10.1;</p>
-<p>// AP/STA/ETH ，每次只能配置一项</p>
+<p>动态IP地址方式：ETH:M:D;</p>
+<p>静态IP地址方式：
+ETH:M:S;I:192.168.10.10;K:255.255.255.0;G:192.168.10.1;</p>
               
             </div>
           </div>
