--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -286,7 +286,7 @@ public-key 采用base64编码后的串</p>
 </code></pre>
 <blockquote>
 <p>第三方平台，device-id 唯一标识一台设备
-设备签名，sha1(sort(device-id、sign-code、timestamp、nonce, "register"))。sort的含义是将参数值按照字母字典排序，然后从小到大拼接成一个字符串。public-key是云平台的公钥，所有设备与第三方平台都有的。本接口计算签名时，需要把字符串常量 “register”参与到计算之中，区别其他场景的签名。</p>
+设备签名，sha1(sort(device-id、sign-code、timestamp、nonce, "register"))。sort的含义是将参数值按照字母字典排序，然后从小到大拼接成一个字符串。sign-code是public-key是云平台的公钥,生成base64字符串方式，所有设备与第三方平台都有的。本接口计算签名时，需要把字符串常量 “register”参与到计算之中，区别其他场景的签名。</p>
 </blockquote>
 <ul>
 <li>响应：</li>
@@ -335,7 +335,7 @@ public-key 采用base64编码后的串</p>
 </code></pre>
 <blockquote>
 <p>第三方平台，device-id 唯一标识一台设备
-设备签名，sha1(sort(device-id、sign-code、timestamp、nonce, "subscribe"))。sort的含义是将参数值按照字母字典排序，然后从小到大拼接成一个字符串。public-key是云平台的公钥，所有设备与第三方平台都有的。本接口计算签名时，需要把字符串常量 “subscribe”参与到计算之中，区别其他场景的签名。</p>
+设备签名，sha1(sort(device-id、sign-code、timestamp、nonce, "subscribe"))。sort的含义是将参数值按照字母字典排序，然后从小到大拼接成一个字符串。sign-code是public-key是云平台的公钥,生成base64字符串方式，所有设备与第三方平台都有的。本接口计算签名时，需要把字符串常量 “subscribe”参与到计算之中，区别其他场景的签名。</p>
 </blockquote>
 <ul>
 <li>响应：</li>
