--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -185,7 +185,11 @@ HTTP头：token = , 使用登陆时返回的token
     &quot;expire&quot;: 1619519996,       // 用户过期时间，不填则当前时刻+1年
     &quot;rule&quot;: &quot;Iksiwim&quot;,          // 用户开门规则，默认识别即通过，可不填写
     &quot;state&quot;: 0,                 // 用户状态，暂内部使用，可不填写
-    &quot;feature&quot;: &quot;data....&quot;       // base64编码的用户特征值，由设备计算，平台不填写
+    &quot;face&quot;:{
+        &quot;vendor&quot;:&quot;bashi&quot;,
+        &quot;version&quot;:&quot;v2.1.0&quot;,
+        &quot;feature&quot;: &quot;data....&quot;       // base64编码的用户特征值，由设备计算，平台不填写
+    }
 }
 </code></pre>
 <p>对用户的操作与数据库的CRUD类似，增加了枚举设备中的所有用户，所有的信息以此为准</p>
@@ -221,7 +225,7 @@ limit : 本次列表的数量;</p>
             &quot;others&quot;: &quot;17763548853&quot;,
             &quot;rule&quot;: &quot;Iksiwim&quot;,
             &quot;state&quot;: 0,
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
         },
         {
             &quot;create_datetime&quot;: &quot;2020-04-27 18:39:56&quot;,
@@ -396,8 +400,8 @@ limit : 本次列表的数量;</p>
 <li>请求</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;action&quot;: &quot;user-info&quot;,
     &quot;reqid&quot;:129393,
+    &quot;action&quot;: &quot;user-info&quot;,
     &quot;params&quot;: [
         {
             &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;
@@ -425,7 +429,12 @@ limit : 本次列表的数量;</p>
             &quot;rule&quot;: &quot;Iksiwim&quot;,
             &quot;state&quot;: 0,
             &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
-            &quot;ops&quot;:0
+            &quot;ops&quot;:0,
+            &quot;face&quot;:{ 
+                &quot;vendor&quot;:&quot;bashi&quot;,
+                &quot;version&quot;:&quot;v2.1.0&quot;,
+                &quot;feature&quot;: &quot;data....&quot;       // base64编码的用户特征值，由设备计算，平台不填写
+            }
         },
         {
             &quot;create_datetime&quot;: &quot;2020-04-27 18:39:56&quot;,
@@ -438,7 +447,12 @@ limit : 本次列表的数量;</p>
             &quot;rule&quot;: &quot;Iksiwim&quot;,
             &quot;state&quot;: 0,
             &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
-            &quot;ops&quot;:0
+            &quot;ops&quot;:0,
+            &quot;face&quot;:{ 
+                &quot;vendor&quot;:&quot;bashi&quot;,
+                &quot;version&quot;:&quot;v2.1.0&quot;,
+                &quot;feature&quot;: &quot;data....&quot;       // base64编码的用户特征值，由设备计算，平台不填写
+            }
         }
     ],
     &quot;reqid&quot;:129393,
