--- a/site/01-introduction/index.html
+++ b/site/01-introduction/index.html
@@ -239,7 +239,7 @@
 </ul>
 <p>典型请求：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/info
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/device
 请求类型: POST
 HTTP头：token = 登陆前获取info信息可不填写，其它必须填写登陆时返回的token值</p>
 </blockquote>
