--- a/site/appendix/index.html
+++ b/site/appendix/index.html
@@ -135,17 +135,18 @@
 <hr />
 <h2 id="_2">错误码</h2>
 <ol>
-<li>100 系统内存不足 </li>
-<li>101 参数出错 </li>
+<li>100 系统内存不足，操作未能达成</li>
+<li>101 参数出错，输入参数错误</li>
 <li>102 数据库操作失败 </li>
 <li>103 操作目标不存在</li>
 <li>104 无效人脸数据</li>
 <li>105 TOKEN不正确</li>
-<li>106 系统过载</li>
-<li>107 校验码出错</li>
+<li>106 系统过载，超出设备限制数量（人脸、卡等）</li>
+<li>107 校验码出错，数据校验出错</li>
 <li>108 快照出错</li>
 <li>109 文件操作失败</li>
-<li>110 内部处理失败</li>
+<li>110 内部处理失败，未知原因</li>
+<li>111 操作不支持，当前设备或版本不支持此命令</li>
 </ol>
               
             </div>
