--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -160,7 +160,7 @@ HTTP头：token = , 使用登陆时返回的token
 </blockquote>
 <p>独立模式时：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/user
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/acm
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
 <p><strong>限制条件： userid 不超过32字节， name不超过32字节， desc不超过32字节</strong></p>
@@ -180,6 +180,10 @@ HTTP头：token = , 使用登陆时返回的token</p>
         &quot;version&quot;:&quot;v2.1.0&quot;,     // 人脸算法版本, double check使用
         &quot;feature&quot;: &quot;data....&quot;   // base64编码的用户特征值，由设备计算，同类型设备，算法版本一致的可以直接下载，节省时间
     },
+
+    &quot;elevator&quot;:{
+        &quot;access&quot;:&quot;data&quot;         // base64编码的电梯信息，每bit表示为1表示当前层可开，为0表示无权限，data最多为16字节，可管理128层
+    }
 }
 </code></pre>
 <blockquote>
