--- a/site/05-visitor/index.html
+++ b/site/05-visitor/index.html
@@ -148,7 +148,7 @@ HTTP头：token = , 使用登陆时返回的token
 </blockquote>
 <p>独立模式时：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/visitor
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/acm
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
 <p><strong>vid 大小不超过32Bytes， code为6位数字</strong></p>
