--- a/site/06-event/index.html
+++ b/site/06-event/index.html
@@ -150,7 +150,7 @@ HTTP头：token = , 使用登陆时返回的token
 </blockquote>
 <p>独立模式时：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/logr
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/event
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
 <h4 id="_3">事件对象</h4>
