--- a/site/09-advt/index.html
+++ b/site/09-advt/index.html
@@ -148,7 +148,7 @@ HTTP头：token = , 使用登陆时返回的token
 </blockquote>
 <p>独立模式时：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/advt
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/acm
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
 <p><strong>id 大小不超过32Bytes</strong></p>
@@ -228,6 +228,11 @@ duration : 此广告播放时间时延，默认设备配置页中的广告时延
     &quot;header&quot;:{
         &quot;reqid&quot;:&quot;129393&quot;         // 透传值，设备内唯一
     },
+
+    &quot;body&quot;:{
+        &quot;offset&quot;:0,
+        &quot;limit&quot;:10
+    }
 }
 </code></pre>
 <ul>
