--- a/site/10-card/index.html
+++ b/site/10-card/index.html
@@ -150,7 +150,7 @@ HTTP头：token = , 使用登陆时返回的token
 </blockquote>
 <p>独立模式时：</p>
 <blockquote>
-<p>请求URL: http://dev-ip-addr:port:/api/card
+<p>请求URL: http://dev-ip-addr:port:/api/v3.x/acm
 HTTP头：token = , 使用登陆时返回的token</p>
 </blockquote>
 <p><strong>id 大小不超过32Bytes, userid不超过32字节， rule不超过32字节</strong></p>
