--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -187,7 +187,7 @@
 <li>请求：</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;action&quot;:&quot;auth&quot;,
+    &quot;action&quot;:&quot;auth-login&quot;,
 
     &quot;header&quot;:{
         &quot;reqid&quot;:&quot;192839&quot;,         // 透传值，设备内唯一
@@ -223,7 +223,7 @@
 <li>请求：</li>
 </ul>
 <pre><code class="language-json">{
-    &quot;action&quot;:&quot;passwd&quot;,
+    &quot;action&quot;:&quot;auth-passwd&quot;,
 
     &quot;header&quot;:{
         &quot;reqid&quot;:&quot;192839&quot;,         // 透传值，设备内唯一
