--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -287,7 +287,7 @@
 </code></pre>
 <blockquote>
 <p>timezone : 时区；与格林尼治时间差的分钟数，负数为东区，正数为西区，如不填写，则使用出厂默认设备东8区
-timestamp ： 1970.1.1 开始的毫秒数；</p>
+timestamp ： 1970.1.1 开始的秒数；</p>
 </blockquote>
 <h5 id="_8">获取签名</h5>
 <ul>
