--- a/site/08-device/index.html
+++ b/site/08-device/index.html
@@ -186,7 +186,7 @@ HTTP头：token = , 使用登陆时返回的token</p>
 </code></pre>
 <blockquote>
 <p>timezone : 时区；与格林尼治时间差的分钟数，负数为东区，正数为西区，如不填写，则使用出厂默认设备东8区
-timestamp ： 1970.1.1 开始的毫秒数；</p>
+timestamp ： 1970.1.1 开始的秒数；</p>
 </blockquote>
 <ul>
 <li>响应</li>
