--- a/site/06-event/index.html
+++ b/site/06-event/index.html
@@ -226,9 +226,9 @@ HTTP头：token = , 使用登陆时返回的token</p>
 <blockquote>
 <p>seqnum : 起始日志序号；选填，默认最小日志序号
 offset : 起始偏移；选填，默认为0
-limit  : 单次条数，默认10条
-<strong>seqnum与offset为二选一参数，如果全部都填写，默认为是seqnum; 如果全不填写，默认为offset = 0</strong></p>
+limit  : 单次条数，默认10条</p>
 </blockquote>
+<p><strong>seqnum与offset为二选一参数，如果全部都填写，默认为是seqnum; 如果全不填写，默认为offset = 0</strong></p>
 <ul>
 <li>响应</li>
 </ul>
