--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -300,10 +300,10 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;:{
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;
         },
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;
         }
         ]
     }
@@ -325,11 +325,11 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;:{
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
             &quot;retcode&quot;: 0    // 本用户操作结果
         },
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
             &quot;retcode&quot;: 0    // 本用户操作结果
         }
         ]
@@ -350,11 +350,11 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;:{
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
             ... // 用户的其它信息，请参照本章的用户对象说明
         },
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
             ... // 用户的其它信息，请参照本章的用户对象说明
         }
         ]
@@ -374,12 +374,12 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;: {
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
             &quot;retcode&quot;: 0    // 本用户操作结果
         },
 
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
             &quot;retcode&quot;: 0    // 本用户操作结果
         }
         ]
@@ -400,10 +400,10 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;:{
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
         },
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
         }
         ]
     }
@@ -423,11 +423,11 @@ limit : 本次列表的数量;</p>
     &quot;body&quot;:{
         &quot;users&quot;: [
         {
-            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
             ... // 用户的其它信息，请参照本章的用户对象说明
         },
         {
-            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg==&quot;,
+            &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
             ... // 用户的其它信息，请参照本章的用户对象说明
         }
         ]
@@ -448,8 +448,8 @@ limit : 本次列表的数量;</p>
 
     &quot;body&quot;:{
         &quot;filesize&quot;:32678,
-        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg==.jpg&quot;, // 文件名后缀代表文件类型，支持nv12, jpg, png
-        &quot;offset&quot;:4096,
+        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg.jpg&quot;, // 文件名后缀代表文件类型，支持nv12, jpg, png
+        &quot;offset&quot;:0,
         &quot;size&quot;: 4096,
         &quot;data&quot;:&quot;base64-encoded file data&quot;
     }
