--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -486,7 +486,7 @@ data : base64编码的数据</p>
     },
 
     &quot;body&quot;:{
-        &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+        &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
     }
 }
 </code></pre>
@@ -501,7 +501,7 @@ data : base64编码的数据</p>
     },
 
     &quot;body&quot;: {
-        &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg==&quot;,
+        &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
 
         &quot;face&quot;:{
             &quot;vendor&quot;:&quot;bashi&quot;,       // 人脸算法供应商，double check使用
@@ -522,7 +522,7 @@ data : base64编码的数据</p>
     },
 
     &quot;body&quot;:{
-        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg==.nv12&quot;,
+        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg.nv12&quot;,
         &quot;offset&quot;:0,
         &quot;size&quot;: 4096,
     }
@@ -543,7 +543,7 @@ UI文件一般仅支持_ui.png或_ui.bmp</p>
     },
 
     &quot;body&quot; : {
-        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg==.nv12&quot;,
+        &quot;filename&quot;:&quot;1aw6wHu2EeqZmH943F8eUg.nv12&quot;,
         &quot;filesize&quot;:32678,   // 文件总体大小
         &quot;offset&quot;:0,         // 本次下载的offset
         &quot;size&quot;: 32000,      // 本次下载的大小
