--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -166,10 +166,9 @@
 <p>如果该地址段有WalOS在网设备（通常接到同一个交换机，在二层网络上相通，IP地址在同一个网段），会响应：</p>
 <pre><code class="language-json">{
     &quot;device-id&quot;:&quot;device-id&quot;,                // 设备ID
+    &quot;product-id&quot;: &quot;A1050.00&quot;,               // 设备型号
     &quot;hardware-version&quot; : &quot;v1.2.0&quot;,          // 硬件载体版本号
     &quot;walos-version&quot; : &quot;v2.1.0&quot;,             // WalOS 操作系统版本号
-    &quot;protocol-version&quot;: &quot;v2.2.0&quot;,           // 协议版本号
-    &quot;algm-vendor&quot; : &quot;bashi&quot;,                // 算法供应商
     &quot;algm-version&quot;  : &quot;v1.1.0&quot;,             // 算法版本号
 }
 </code></pre>
