--- a/site/appendix/index.html
+++ b/site/appendix/index.html
@@ -147,6 +147,9 @@
 <li>109 文件操作失败</li>
 <li>110 内部处理失败，未知原因</li>
 <li>111 操作不支持，当前设备或版本不支持此命令</li>
+<li>112 设备已激活，设备登陆平台请求激活时，如果设备已激活，则返回此值</li>
+<li>113 设备未激活，未激活设备请求非注册、PING、激活消息时，返回此值</li>
+<li>114 设备未注册，设备注册前发送非PING消息则返回此值</li>
 </ol>
               
             </div>
