--- a/site/10-card/index.html
+++ b/site/10-card/index.html
@@ -396,7 +396,7 @@ limit : 本次列举卡数量，默认10，不超过10
 
     &quot;body&quot;:{
         &quot;timestamp&quot;:16092820, // 读卡时间
-        &quot;type&quot;:&quot;ic&quot;,    // 目前支持的卡类型
+        &quot;type&quot;:&quot;ic&quot;,    // 目前支持的卡类型, ic为ID卡，en为加密卡
         &quot;data&quot;:...      // base64编码的卡信息，目前为卡ID号
     }
 }
