--- a/site/10-card/index.html
+++ b/site/10-card/index.html
@@ -284,7 +284,8 @@ data : IC卡匹配数据，必填</p>
     },
 
     &quot;body&quot;:{
-        &quot;cards&quot;:[
+        &quot;uid&quot;:&quot;9xosiqlsqoq&quot;,    // 查询UID查询卡信息，可不填写
+        &quot;cards&quot;:[               // 根据卡ID查询卡信息，可不填写
             {
             &quot;id&quot;:&quot;EeqZmH943F8&quot;,
             },
@@ -306,7 +307,7 @@ data : IC卡匹配数据，必填</p>
     },
 
     &quot;body&quot;:{
-        &quot;cards&quot;:[
+        &quot;cards&quot;:[ 
             {
             &quot;id&quot;:&quot;EeqZmH943F8&quot;,
             ... // 卡其它信息，详见本章卡对象说明
